<resources>
    <string name="app_name">Brain Workout</string>
    <string name="please_choose_one">Please choose one:</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="tryAgain">Try again</string>
    <string name="highScore">High score:</string>
    <string name="score">Score:</string>
    <string name="game_rules">Rules of Brain Workout</string>
    <string name="rule_1">1. You will be presented, one question at a time, with 5 questions from a variety of subjects.</string>
    <string name="rule_2">2. Select the answer you believe to be correct for each question. You have 30 seconds for each question.</string>
    <string name="rule_3">3. Once your answer is confirmed, you will be told if it is correct or not before moving onto the next question.</string>
    <string name="rule_4">4. Once all 5 questions have been answered, your final score and high score will be displayed to you.</string>
    <string name="rule_5">5. Have fun, exercise your brain, and enjoy the game!</string>
    <string name="ready">When you are ready, please press the button below to start the Brain Workout!</string>
    <string name="next">Head over to the next page</string>
    <string name="beginGame">Begin the Brain Workout!</string>
    <string name="twenty">20</string>
    <string name="zero">0</string>
    <string name="q1">Who currently wears #99 for the New York Yankees?</string>
    <string name="q1a1">Gleyber Torres</string>
    <string name="q1a2">Gary Sanchez</string>
    <string name="q1a3">Giancarlo Stanton</string>
    <string name="q1a4">Aaron Judge</string>
    <string name="q1a5">Brett Gardner</string>
    <string name="q2">Who was the 44th president of the U.S.?</string>
    <string name="q2a1">Bill Nye the Science Guy</string>
    <string name="q2a2">Barack Obama</string>
    <string name="q2a3">Bill Clinton</string>
    <string name="q2a4">Bernie Sanders</string>
    <string name="q2a5">Bob the Builder</string>
    <string name="q3">Who discovered the polio vaccine?</string>
    <string name="q3a1">The Jonas Brothers</string>
    <string name="q3a2">Jonas Salk</string>
    <string name="q3a3">Kevin Jonas</string>
    <string name="q3a4">Joe Jonas</string>
    <string name="q3a5">Nick Jonas</string>
    <string name="q4">Which state(s) was part of the original 13 colonies? Select all that apply.</string>
    <string name="q4a1">North Carolina</string>
    <string name="q4a2">New Jersey</string>
    <string name="q4a3">Louisiana</string>
    <string name="q4a4">Delaware</string>
    <string name="q4a5">Florida</string>
    <string name="q5">Which lead(s) from The Bachelor did NOT marry their final pick? Select all that apply.</string>
    <string name="q5a1">Jason Mesnick</string>
    <string name="q5a2">Sean Lowe</string>
    <string name="q5a3">Arie Luyendyk Jr.</string>
    <string name="q5a4">Peter Weber</string>
    <string name="q5a5">Ben Higgins</string>
    <string name="confirm2">Please confirm your selected answer(s)</string>
    <string name="confirm1">Answer confirmation!</string>
</resources>