<?xml version="1.0" encoding="utf-8"?>

<!-- Enable scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:padding="6dp">

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="monospace"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="monospace"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="casual"
            android:padding="12dp"
            android:text="@string/q3"
            android:textAlignment="center"
            android:textColor="#EC907F"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <RadioButton
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/q3a1"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/q3a2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/q3a3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/q3a4"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/q3a5"
                android:textColor="#000000"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#EC907F"
            android:fontFamily="monospace"
            android:text="@string/confirm"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:fontFamily="casual"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>