<?xml version="1.0" encoding="utf-8"?>

<!-- Enable scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="casual"
            android:text="@string/game_rules"
            android:textAlignment="center"
            android:textColor="#EC907F"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/rule_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/rule_2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/rule_3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rule4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/rule_4"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rule5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/rule_5"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="monospace"
            android:text="@string/ready"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#EC907F"
            android:fontFamily="monospace"
            android:onClick="clickNext"
            android:text="@string/beginGame"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>