<?xml version="1.0" encoding="utf-8"?>
<!-- Enable scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="monospace"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yourHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="monospace"
            android:text="@string/highScore"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#EC907F"
            android:fontFamily="monospace"
            android:onClick="tryAgainButton"
            android:text="@string/tryAgain"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
